# AMMOProtocol

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
example_impl/: SimpleClient.cpp  SimpleServer.cpp
includes/: AMMOProtocol.hpp  BMMOProtocol.hpp
includes/common/: common.hpp  common_all.hpp  entity.hpp  event_handler.hpp  message.hpp  middleware.hpp  packet.hpp
includes/entities/: entities.hpp  quaternion.hpp  vec3.hpp
includes/entity/: entity.hpp  entity_all.hpp  quaternion.hpp  string.hpp  vec3.hpp
includes/event/: connection_on_message_event.hpp  connection_send_event.hpp  event_all.hpp  event_handler.hpp  on_message_event.hpp  role_send_event.hpp
includes/network/: channel.hpp  channel_type.hpp  connection.hpp  network.hpp  network_all.hpp  receiver.hpp  reliable_channel.hpp  sender.hpp
includes/role/: client.hpp  client_deprecated.hpp  client_state.hpp  role.hpp  role_all.hpp  server.hpp  server_deprecated.hpp
includes/structure/: modulo_queue.hpp  structure.hpp  structure_all.hpp  ts_modulo_queue.hpp  ts_queue.hpp
includes/utils/: message_reader.hpp  message_writer.hpp
tests/: common.hpp  entity_serialization.cpp  packet_rw.cpp  sanity_check.cpp  test_entity_serialization.cpp  test_modulo_queue.cpp  test_packet_rw.cpp  test_reliable_channel.cpp
